add_subdirectory(Session)
add_subdirectory(View)
add_subdirectory(StaticSimple)
add_subdirectory(StatusMessage)
add_subdirectory(Authentication)
add_subdirectory(Utils)
add_subdirectory(UserAgent)

if (PLUGIN_MEMCACHED)
    message(STATUS "PLUGIN: Memcached, enabled.")
    add_subdirectory(Memcached)
else (PLUGIN_MEMCACHED)
    message(STATUS "PLUGIN: Memcached, disabled.")
endif (PLUGIN_MEMCACHED)

if (PLUGIN_MEMCACHEDSESSIONSTORE        )
    message(STATUS "PLUGIN: MemcachedSessionStore, enabled.")
    add_subdirectory(MemcachedSessionStore)
else (PLUGIN_MEMCACHEDSESSIONSTORE)
    message(STATUS "PLUGIN: MemcachedSessionStore, disabled.")
endif (PLUGIN_MEMCACHEDSESSIONSTORE)

if (PLUGIN_STATICCOMPRESSED)
    message(STATUS "PLUGIN: StaticCompressed, enabled.")
    add_subdirectory(StaticCompressed)
else (PLUGIN_STATICCOMPRESSED)
    message(STATUS "PLUGIN: StaticCompressed, disabled.")
endif (PLUGIN_STATICCOMPRESSED)

if (PLUGIN_CSRFPROTECTION)
    message(STATUS "PLUGIN: CSRFProtection, enabled.")
    add_subdirectory(CSRFProtection)
else (PLUGIN_CSRFPROTECTION)
    message(STATUS "PLUGIN: CSRFProtection, disabled.")
endif (PLUGIN_CSRFPROTECTION)
