add_subdirectory(Session)
add_subdirectory(View)
add_subdirectory(StaticSimple)
add_subdirectory(StatusMessage)
add_subdirectory(Authentication)
add_subdirectory(Utils)
add_subdirectory(UserAgent)

if (PLUGIN_MEMCACHED)
    message(STATUS "PLUGIN: Memcached, enabled.")
    add_subdirectory(Memcached)
else ()
    message(STATUS "PLUGIN: Memcached, disabled.")
endif ()

if (PLUGIN_MEMCACHEDSESSIONSTORE)
    message(STATUS "PLUGIN: MemcachedSessionStore, enabled.")
    add_subdirectory(MemcachedSessionStore)
else ()
    message(STATUS "PLUGIN: MemcachedSessionStore, disabled.")
endif ()

if (PLUGIN_STATICCOMPRESSED)
    message(STATUS "PLUGIN: StaticCompressed, enabled.")
    add_subdirectory(StaticCompressed)
else ()
    message(STATUS "PLUGIN: StaticCompressed, disabled.")
endif ()

if (PLUGIN_CSRFPROTECTION)
    message(STATUS "PLUGIN: CSRFProtection, enabled.")
    add_subdirectory(CSRFProtection)
else ()
    message(STATUS "PLUGIN: CSRFProtection, disabled.")
endif ()
